samples/_failures_safe/1761358628_a84f2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_918e9b7f.c: In function ‘main’:
./samples/SAFE/__tmp_918e9b7f.c:145:15: error: expected ‘;’ at end of input
  145 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_918e9b7f.c:145:9: error: expected declaration or statement at end of input
  145 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_918e9b7f.c:145:9: error: expected declaration or statement at end of input
